--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 				<label for="password">Password</label>
 				<input type="password" name="password" id="password" />
 			</div>
-			<button>Sign Up</button>
+			<button>Login</button>
 		</form>
 	</body>
 </html>
